// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Browse renders associated classes correctly 1`] = `
<React.Fragment>
  <BrowseAssociatedClassesSelectionContainer />
</React.Fragment>
`;

exports[`Browse renders courses correctly 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles) />
  <ForwardRef(WithStyles) />
  <ForwardRef(WithStyles) />
</React.Fragment>
`;

exports[`Browse renders schools correctly 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles) />
</React.Fragment>
`;

exports[`Browse renders sections correctly 1`] = `
<React.Fragment>
  <SectionSelectionContainer />
</React.Fragment>
`;

exports[`Browse renders subjects correctly 1`] = `
<React.Fragment>
  <ForwardRef(WithStyles) />
  <ForwardRef(WithStyles) />
  <ForwardRef(WithStyles) />
</React.Fragment>
`;
